# parser-proxy-ws

./: .gitignore  Cargo.toml  README.md  README_CN.md  build.sh  config.toml  config.toml.example  start-client.sh  start-server.sh
examples/: EXAMPLES.md  README.md  advanced_usage.rs  client.html  client.py  client.ts  integrated_server.rs  library_integration.rs  package.json  server_integration.rs  simple_usage.rs  trading_bot_integration.rs
sol-parser-sdk/src/core/: account_filler.rs
src/: config.rs  lib.rs  main.rs  ws_server.rs
